/*
SPDX-FileCopyrightText: 2022-present Open Networking Foundation <info@opennetworking.org>

SPDX-License-Identifier: Apache-2.0
*/

syntax = "proto3";

package atomix.proxy.v1;

option java_package = "io.atomix.api.proxy.v1";
option java_outer_classname = "ProxyV1";
option java_multiple_files = true;

import "gogoproto/gogo.proto";

service ProxyControl {
    rpc Connect (ConnectRequest) returns (ConnectResponse);
    rpc Configure (ConfigureRequest) returns (ConfigureResponse);
    rpc Disconnect (DisconnectRequest) returns (DisconnectResponse);
}

message StoreId {
    string namespace = 1;
    string name = 2;
}

message DriverId {
    option (gogoproto.equal) = true;
    string name = 1;
    string version = 2;
}

message ConnectRequest {
    StoreId store_id = 1 [
        (gogoproto.customname) = "StoreID",
        (gogoproto.nullable) = false
    ];
    DriverId driver_id = 2 [
        (gogoproto.customname) = "DriverID",
        (gogoproto.nullable) = false
    ];
    bytes config = 3;
}

message ConnectResponse {

}

message ConfigureRequest {
    StoreId store_id = 1 [
        (gogoproto.customname) = "StoreID",
        (gogoproto.nullable) = false
    ];
    bytes config = 2;
}

message ConfigureResponse {

}

message DisconnectRequest {
    StoreId store_id = 1 [
        (gogoproto.customname) = "StoreID",
        (gogoproto.nullable) = false
    ];
}

message DisconnectResponse {

}
